--- a/Application/AngularWithFireBase/package.json
+++ b/Application/AngularWithFireBase/package.json
@@ -15,10 +15,12 @@
     "@angular/common": "~9.0.3",
     "@angular/compiler": "~9.0.3",
     "@angular/core": "~9.0.3",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.3",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "firebase": "^7.14.0",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.5.4",
